# tickit-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  generate_link.sh  install_tickit.sh
examples/: demo-dummy.rs  demo-ev.rs  demo-input.rs  demo-pen.rs  demo-termctl.rs  demo-timer.rs  demo-xterm256.rs
src/: c.rs  lib.rs  test.rs
src/drv/: c.rs  mod.rs
src/mock/: c.rs  mod.rs
